Bug fix de overflow en la caja de respuesta

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,8 +1,3 @@
-* {
-    background-color:aqua;
-}
-
-
 body {
     display: flex;
     flex-direction: row;
@@ -12,33 +7,50 @@ body {
     height: 12.2rem;
 }
 
+/*Principal Container*/
+
 .container {
     padding: 4rem 4rem 0 16rem;
 }
+
+/* Encriptador section */
 
 .encrypter .encrypter__text + div {
     margin-bottom: 7.2rem;
 }
 
 .encrypter__buttons {
-    width: 68rem;
+    width: 65.56rem;
 }
 
 .button {
-    width: 32.8rem;
+    width: 30.5rem;
 }
 
+/* Response screen encriptador section */
+
 .responsescreen {
-    width: 45rem;
+    width: 41rem;
     height: 98rem;
-    padding: 7.2rem 4rem;
+    padding: 4.8rem 4rem;
 }
 
 .responsescreen__response {
-    width: 38rem;
+    width: 28rem;
     height: 100%;
+    justify-content: center;
+}
+
+.responsep {
+    max-height: 67rem;
 }
 
 .muñecoresponse{
+    width: 26rem;
     display: block;
+}
+
+.btn_copy {
+    width: 100%;
+    height: 6.8rem;
 }
